@@ -1,3 +1,7 @@
+2017-05-22  Charlie Zender  <zender@uci.edu>
+
+	* Infer NCEP NCAR Reanalysis 1 as Gaussian grid, requires relaxing weight tolerance to < 1.0e-6
+
 2017-05-21  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.6.7 release procedure:
